changes committed